# simrec

./: CITATION.cff  LICENSE  README.md  pyproject.toml
papers/joss/: paper.bib  paper.md
src/simrec/schema/: LICENSE  README.md  claim.schema.json  event.schema.json
src/simrec/validate/: jsonschema.py
src/tests/validate/schemas/: test_validator_for.py
